# rabeehaipro

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  Dockerfile  Makefile  PROJECT_STATUS.md  QUALITY_GATE.md  README.md  RELEASE_AUDIT.md  alembic.ini  puzzle.html  puzzle.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ba6c33b46bf1_initial_schema.py
backend/: AI_CONTEXT.md  CONTINUE_RULES.md  requirements.txt  test_memory.py
backend/app/: main.py  requirements.txt
backend/app/agents/: agent.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  exceptions.py  logging.py  settings.py
backend/app/memory/: memory.py  test_memory.py
backend/app/schemas/: chat.py
backend/app/services/: ollama_service.py
deploy/: .env.example  docker-compose.yml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: sidebar.tsx  theme-toggle.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  switch.tsx  tabs.tsx  textarea.tsx
frontend/electron/: main.js  preload.js
frontend/lib/: api-client.ts
frontend/scripts/: dev-electron.js
src/rabeeh_core/: __init__.py  cli.py
src/rabeeh_core/agents/: __init__.py  automation.py  base.py  browser.py  business.py  coding.py  file.py  memory_agent.py  office.py  planner.py  research.py  reviewer.py  vision.py
src/rabeeh_core/api/: __init__.py  app.py  auth.py  middleware.py  monitoring.py
src/rabeeh_core/api/routes/: __init__.py  agents.py  auth.py  chat.py  health.py  tasks.py  tools.py
src/rabeeh_core/business/: __init__.py  models.py  repository.py  routes.py  schemas.py
src/rabeeh_core/config/: __init__.py  logging.py  metrics.py  schemas.py  settings.py
src/rabeeh_core/infra/: __init__.py  server.py
src/rabeeh_core/llm/: __init__.py  base.py  capabilities.py  litellm_provider.py  mock.py  ollama.py  openrouter.py  registry.py  router.py
src/rabeeh_core/memory/: __init__.py  base.py  chroma_store.py  in_memory.py  knowledge_graph.py  postgres_store.py
src/rabeeh_core/orchestration/: __init__.py  graph.py  runner.py  state.py
src/rabeeh_core/persistence/: __init__.py  db.py  models.py  repository.py
src/rabeeh_core/security/: __init__.py  approval.py  secrets.py
src/rabeeh_core/tasks/: __init__.py  celery_app.py  orchestrator_tasks.py  worker.py
src/rabeeh_core/tools/: __init__.py  base.py  browser.py  builtin.py  code.py  computer.py  file.py  office.py  pdf_.py  registry.py  vision.py
tests/: __init__.py  conftest.py  test_agents_business.py  test_agents_memory.py  test_api.py  test_business.py  test_business_repository.py  test_config.py  test_graph.py  test_llm.py  test_memory.py  test_orchestration.py  test_persistence.py  test_phase4.py  test_phase4_agents.py  test_planner_reviewer.py  test_router.py  test_runner.py  test_security.py  test_tools.py  test_tools_advanced.py  test_tools_browser.py  test_tools_computer.py  test_tools_file.py  test_tools_vision.py
